--- a/src/app/components/page-end/page-end.component.html
+++ b/src/app/components/page-end/page-end.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12 mt-3">
-        <mat-card elevation="2" class="p-1 text-center">
+        <mat-card elevation="2" class="p-1 text-center" [style.user-select]="'none'">
             <p #lblFooter class="mb-2">
                 {{ this.footer().payload }}
             </p>
