--- a/src/app/components/page-title/page-title.component.html
+++ b/src/app/components/page-title/page-title.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 mt-3 mb-3">
         <mat-card elevation="2" class="p-3 text-center">
-      <span #lblTitle class="fs-4 fw-normal">
+      <span #lblTitle class="fs-4 fw-normal" [style.user-select]="'none'">
         {{ this.title().payload | uppercase }}
       </span>
         </mat-card>
